[package]
name = "pine64-hal"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
static_assertions = "1.1"
cortex-a = "3.0"
nb = "0.1"
bitfield = "0.13"
embedded-time = "0.10"
as-slice = "0.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.void]
default-features = false
version = "1.0"

[dependencies.nom]
version = "5.1"
default-features = false

[dependencies.pine64]
path = "../pine64"
